fix <a> overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -248,6 +248,7 @@
   }
   a {
     @apply text-blue-600 underline;
+    @apply break-words;
   }
   hr {
     display: block;
